--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,3 +27,5 @@ Suggests:
     ggplot2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/jhuwit/asleep
+BugReports: https://github.com/jhuwit/asleep/issues
