--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export("%>%")
 export(asleep)
 export(asleep_check)
 export(asleep_version)
+export(get_sslnet)
 export(have_asleep)
 export(sl_download_model)
+export(sl_get_sslnet)
 export(sl_load_model)
 export(sl_read)
 export(sl_rename_data)
